--- a/youtube_detector.ipynb
+++ b/youtube_detector.ipynb
@@ -36,7 +36,7 @@
       "source": [
         "#cargar datos desde drive acceso libre\n",
         "\n",
-        "FILEID = \"1Jyv_aOFGZrF3IGFTe9S5AMfsFIKRLruk\"\n",
+        "FILEID = \"1HZ3-I9dSYyrV3JGDd-E1BPV_JVzVzV-j\"\n",
         "\n",
         "!wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id='$FILEID -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=\"$FILEID -O  canciones.xlsx && rm -rf /tmp/cookies.txt\n",
         "#!unzip -o codigos.zip\n",
@@ -509,7 +509,278 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "# 1. DESCARGA DE CANCIONES DESDE EL EXCEL\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "\n",
+        "# Instalamos gdown si no está disponible (solo si estás en Colab o entorno nuevo)\n",
+        "try:\n",
+        "    import gdown\n",
+        "except ImportError:\n",
+        "    import os\n",
+        "    os.system('pip install gdown')\n",
+        "    import gdown\n",
+        "\n",
+        "# Identificador de tu Google Sheet con las 30 canciones\n",
+        "FILEID = \"1HZ3-I9dSYyrV3JGDd-E1BPV_JVzVzV-j\"\n",
+        "\n",
+        "# Descargamos el Excel desde Google Drive con gdown\n",
+        "gdown.download(f\"https://drive.google.com/uc?id={FILEID}\", \"canciones.xlsx\", quiet=False)\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import subprocess\n",
+        "import yt_dlp as youtube_dl\n",
+        "import soundfile as sf\n",
+        "\n",
+        "# Leemos el Excel que contiene: link, band, type, type_num\n",
+        "X = pd.read_excel(\"canciones.xlsx\")\n",
+        "\n",
+        "# Creamos la carpeta donde guardaremos mp3 y wav\n",
+        "os.makedirs('results', exist_ok=True)\n",
+        "\n",
+        "# Función para descargar un video de YouTube como MP3\n",
+        "def download_ytvid_as_mp3(video_url, name):\n",
+        "    video_info = youtube_dl.YoutubeDL().extract_info(url=video_url, download=False)\n",
+        "    filename = f\"{name}.mp3\"\n",
+        "    options = {\n",
+        "        'format': 'bestaudio/best',\n",
+        "        'keepvideo': False,\n",
+        "        'outtmpl': filename,\n",
+        "    }\n",
+        "    with youtube_dl.YoutubeDL(options) as ydl:\n",
+        "        ydl.download([video_info['webpage_url']])\n",
+        "    print(f\"Download complete: {filename}\")\n",
+        "\n",
+        "# Iteramos sobre las filas del Excel, descargamos y convertimos a WAV\n",
+        "N = len(X)\n",
+        "for n in range(N):\n",
+        "    link  = X.loc[n, 'link']\n",
+        "    band  = X.loc[n, 'band']\n",
+        "    tnum  = X.loc[n, 'type_num']\n",
+        "    name_ = f\"results/{band}_{n}_{tnum}\"\n",
+        "    print(f\"\\n=== Descargando canción {n+1}/{N} ===\")\n",
+        "    print(f\"Link: {link}\")\n",
+        "    download_ytvid_as_mp3(link, name_)\n",
+        "    # Convertimos el MP3 a WAV (48 kHz, estéreo si aplica)\n",
+        "    subprocess.call([\n",
+        "        'ffmpeg', '-y',\n",
+        "        '-i', f\"{name_}.mp3\",\n",
+        "        '-ar', '48000',   # sample rate 48 kHz\n",
+        "        '-ac', '2',       # 2 canales estéreo\n",
+        "        f\"{name_}.wav\"\n",
+        "    ])\n",
+        "    # Borramos el mp3 original para ahorrar espacio\n",
+        "    os.remove(f\"{name_}.mp3\")\n",
+        "\n",
+        "\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "# 2. PARTICIONAR CADA WAV EN 5 FRAGMENTOS DE 5 SEGUNDOS → 50 MUESTRAS TOTALES\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "\n",
+        "# Listamos todos los archivos .wav que acabamos de generar\n",
+        "path = 'results/'\n",
+        "wav_files = [f for f in os.listdir(path) if f.endswith('.wav')]\n",
+        "print(f\"\\nTotal de archivos WAV encontrados: {len(wav_files)} (deberían ser 10)\")\n",
+        "\n",
+        "# Parámetros de segmentación\n",
+        "fs = 48000            # frecuencia de muestreo (48 kHz)\n",
+        "ts = 5                # duración de cada segmento en segundos\n",
+        "# Para obtener 50 segmentos en total a partir de 10 canciones,\n",
+        "# necesitamos 5 offsets (5 segundos de duración) por cada canción:\n",
+        "tl = [10,  40,  70, 100, 130]   # instantes (en segundos) donde empieza cada fragmento de 5 s\n",
+        "\n",
+        "Ns = len(wav_files) * len(tl)   # 10 canciones × 5 offsets = 50 segmentos\n",
+        "# Preasignamos arrays:\n",
+        "x_t    = np.zeros((Ns, int(ts*fs), 2), dtype=np.float32)  # Ns segmentos, muestras (5s×48kHz), 2 canales\n",
+        "label  = np.zeros((Ns, 1),  dtype=int)                    # etiqueta de género (1 o 2)\n",
+        "name_c = []                                               # nombre de canción (sin sufijo \"_n_type\")\n",
+        "\n",
+        "i = 0\n",
+        "for name in wav_files:\n",
+        "    filepath = os.path.join(path, name)\n",
+        "    x, fs_file = sf.read(filepath)    # x.shape = (total_muestras, 2)\n",
+        "    if fs_file != fs:\n",
+        "        raise RuntimeError(f\"Esperamos 48 kHz, pero {name} está a {fs_file} Hz\")\n",
+        "    # Etiqueta de género tomada del penúltimo carácter antes de \".wav\": \"..._{type}.wav\"\n",
+        "    genre_num = int(name[-5])  # asumiendo formato \"..._{type}.wav\"\n",
+        "    base_name = name[:-6]      # para evitar \"..._n_t.wav\"\n",
+        "    for ti_seg in tl:\n",
+        "        start = int(ti_seg * fs)\n",
+        "        end   = int((ti_seg + ts) * fs)\n",
+        "        x_t[i]   = x[start:end, :]      # recortamos 5 segundos (estéreo)\n",
+        "        label[i] = genre_num\n",
+        "        name_c.append(base_name)\n",
+        "        print(f\"{i:02d} → {name}   segundos {ti_seg}:{ti_seg+ts}   género {genre_num}\")\n",
+        "        i += 1\n",
+        "\n",
+        "print(f\"\\nForma de x_t: {x_t.shape}   → 50 segmentos de 5 s en estéreo\")\n",
+        "print(f\"Forma de label: {label.shape}\")\n",
+        "\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "# 3. CÁLCULO DE LA FFT Y NORMALIZACIÓN DE CADA SEGMENTO\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "\n",
+        "# 3.A. Construimos el vector de frecuencias completo para rfft (para ts×fs muestras)\n",
+        "vf = np.fft.rfftfreq(int(ts*fs), 1/fs)\n",
+        "\n",
+        "# 3.B. Calculamos la FFT real para cada segmento (axis=1 recorre el tiempo)\n",
+        "#      Luego promediamos ambos canales en el dominio de magnitudes.\n",
+        "Xw = np.fft.rfft(x_t, axis=1)          # shape = (50, N_bins, 2)\n",
+        "Xw_mag = np.mean(np.abs(Xw), axis=2)   # shape = (50, N_bins)\n",
+        "\n",
+        "# 3.C. Escogemos un fmax razonable (p. ej. 7000 Hz) para recortar el espectro\n",
+        "fmax = 7000\n",
+        "fmax_idx = np.argmin(np.abs(vf - fmax))  # índice del bin más cercano a fmax\n",
+        "print(f\"\\nBin máximo seleccionado (f <= {fmax} Hz):  {fmax_idx}  (f = {vf[fmax_idx]:.1f} Hz)\")\n",
+        "\n",
+        "# 3.D. Cortamos el espectro a [0 : fmax_idx]\n",
+        "Xw_crop = Xw_mag[:, :fmax_idx]\n",
+        "\n",
+        "# 3.E. Normalizamos entre 0 y 1 cada vector de frecuencias\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "sca = MinMaxScaler()\n",
+        "Xw_norm = sca.fit_transform(Xw_crop)   # shape = (50, fmax_idx)\n",
+        "\n",
+        "print(f\"Dataset final de espectros normalizados:  {Xw_norm.shape}   (50 muestras × {fmax_idx} bins)\")\n",
+        "\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "# 4. VISUALIZACIÓN RÁPIDA Y SEPARABILIDAD 2D\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.manifold import TSNE\n",
+        "from sklearn.decomposition import PCA\n",
+        "\n",
+        "# 4.A. Graficar magnitud del primer segmento (solo para verificar)\n",
+        "plt.figure(figsize=(6,3))\n",
+        "plt.plot(vf[:fmax_idx], Xw_norm[0], color='tab:blue')\n",
+        "plt.title(\"Espectro normalizado (fragmento #0)\")\n",
+        "plt.xlabel(\"Frecuencia [Hz]\")\n",
+        "plt.ylabel(\"Magnitud normalizada\")\n",
+        "plt.grid(True)\n",
+        "plt.show()\n",
+        "\n",
+        "# 4.B. Separabilidad 2D usando TSNE\n",
+        "red_ = TSNE(perplexity=20, n_components=2, random_state=123, learning_rate='auto', init='pca')\n",
+        "X_2D = red_.fit_transform(Xw_norm)  # shape = (50, 2)\n",
+        "\n",
+        "# Graficar scatter con colorbar\n",
+        "plt.figure(figsize=(5,4))\n",
+        "plt.scatter(X_2D[:,0], X_2D[:,1], c=label.ravel(), cmap='viridis', s=20)\n",
+        "plt.colorbar(label=\"Género (1 vs 2)\")\n",
+        "plt.title(\"Separabilidad 2D (TSNE) de los 50 segmentos\")\n",
+        "plt.xlabel(\"Dim 1\")\n",
+        "plt.ylabel(\"Dim 2\")\n",
+        "plt.grid(True)\n",
+        "plt.show()\n",
+        "\n",
+        "# Graficar scatter con nombres de canciones\n",
+        "color_ = [\"b\", \"y\"]\n",
+        "plt.figure(figsize=(5,4))\n",
+        "plt.scatter(X_2D[:,0], X_2D[:,1], c=label.ravel(), s=10, cmap='viridis')\n",
+        "for idx, tex in enumerate(name_c):\n",
+        "    plt.text(\n",
+        "        X_2D[idx,0] * 1.025,\n",
+        "        X_2D[idx,1] * 1.025,\n",
+        "        tex.split('/')[-1],\n",
+        "        fontsize=6,\n",
+        "        color=color_[int(label[idx,0] - 1)]\n",
+        "    )\n",
+        "plt.title(\"Mapa 2D con etiquetas de canciones\")\n",
+        "plt.xlabel(\"Dim 1\")\n",
+        "plt.ylabel(\"Dim 2\")\n",
+        "plt.grid(True)\n",
+        "plt.show()\n",
+        "\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "# 5. ENTRENAMIENTO DEL CLASIFICADOR KNN (DISTANCIA EUCLÍDEA)\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "import joblib\n",
+        "\n",
+        "knn = KNeighborsClassifier(n_neighbors=3, metric='euclidean')\n",
+        "knn.fit(Xw_norm, label.ravel())\n",
+        "\n",
+        "os.makedirs('modelo', exist_ok=True)\n",
+        "joblib.dump({\n",
+        "    'knn_model': knn,\n",
+        "    'scaler'   : sca,\n",
+        "    'fmax_idx' : fmax_idx,\n",
+        "    'vf'       : vf[:fmax_idx],\n",
+        "    'fs'       : fs\n",
+        "}, 'modelo/knn_genre_detector.pkl')\n",
+        "\n",
+        "print(\"\\n—> Entrenamiento completado: 50 vectores (5 s cada uno) con KNN guardado en modelo/knn_genre_detector.pkl\\n\")\n",
+        "\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "# 6. CREAR UN FRAGMENTO DE PRUEBA EXTRAÍDO DE LOS 50 SEGMENTOS Y GUARDARLO COMO WAV\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "\n",
+        "i_test = 32\n",
+        "test_fragment = x_t[i_test]   # forma (240000, 2)\n",
+        "sf.write(\"nuevo_fragmento_5s.wav\", test_fragment, fs)\n",
+        "print(f\"→ Se creó 'nuevo_fragmento_5s.wav' a partir del segmento #{i_test} (género real = {int(label[i_test,0])})\\n\")\n",
+        "\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "# 7. FUNCIÓN PARA DETECTAR GÉNERO DE UN NUEVO FRAGMENTO DE 5 s\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "\n",
+        "def predict_genre_from_wav(new_wav_path: str, model_path: str = 'modelo/knn_genre_detector.pkl'):\n",
+        "    \"\"\"\n",
+        "    Carga un archivo WAV de exactamente 5 segundos (mono o estéreo),\n",
+        "    calcula su FFT, recorta hasta fmax_idx, normaliza con el mismo MinMaxScaler\n",
+        "    y predice el género usando el KNN entrenado.\n",
+        "    Devuelve la etiqueta (1 o 2).\n",
+        "    \"\"\"\n",
+        "    mdl = joblib.load(model_path)\n",
+        "    knn_loaded = mdl['knn_model']\n",
+        "    sca_loaded = mdl['scaler']\n",
+        "    fmax_idx  = mdl['fmax_idx']\n",
+        "    fs_ref    = mdl['fs']\n",
+        "\n",
+        "    x5, fs_file = sf.read(new_wav_path)\n",
+        "    if fs_file != fs_ref:\n",
+        "        raise ValueError(f\"El WAV está a {fs_file} Hz; debe estar a {fs_ref} Hz.\")\n",
+        "    n5 = 5 * fs_ref\n",
+        "    if x5.ndim == 1:\n",
+        "        if x5.shape[0] < n5:\n",
+        "            raise ValueError(\"El archivo WAV es más corto de 5 segundos.\")\n",
+        "        x5_seg = x5[:n5]\n",
+        "    else:\n",
+        "        if x5.shape[0] < n5:\n",
+        "            raise ValueError(\"El WAV (estéreo) es más corto de 5 segundos.\")\n",
+        "        x5_seg = x5[:n5, :]\n",
+        "\n",
+        "    if x5_seg.ndim == 1:\n",
+        "        Xw5 = np.abs(np.fft.rfft(x5_seg))\n",
+        "    else:\n",
+        "        Xw5_0 = np.abs(np.fft.rfft(x5_seg[:, 0]))\n",
+        "        Xw5_1 = np.abs(np.fft.rfft(x5_seg[:, 1]))\n",
+        "        Xw5   = (Xw5_0 + Xw5_1) / 2.0\n",
+        "\n",
+        "    mag5_crop = Xw5[:fmax_idx].reshape(1, -1)\n",
+        "    mag5_norm = sca_loaded.transform(mag5_crop)\n",
+        "\n",
+        "    pred = knn_loaded.predict(mag5_norm)[0]\n",
+        "    return int(pred)\n",
+        "\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "# 8. EJEMPLO DE USO DEL DETECTOR (SE PREDICE SOBRE 'nuevo_fragmento_5s.wav')\n",
+        "# ——————————————————————————————————————————————————————————————————————————\n",
+        "\n",
+        "nuevo_fragmento = \"nuevo_fragmento_5s.wav\"  # creado en el paso anterior\n",
+        "\n",
+        "try:\n",
+        "    genero_predicho = predict_genre_from_wav(nuevo_fragmento)\n",
+        "    print(f\"\\n¡Género predicho para '{nuevo_fragmento}': {genero_predicho}  (1=Pop, 2=Vallenato)!\\n\")\n",
+        "    display(Audio(nuevo_fragmento, rate=fs))\n",
+        "except Exception as e:\n",
+        "    print(\"Error al predecir género:\", e)"
+      ],
       "metadata": {
         "id": "irVPbGdwBIkE"
       },
