--- a/ejercicios_Laplace.ipynb
+++ b/ejercicios_Laplace.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMc6APywTCFtzk/r0+AWFNB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +82,6 @@
         "\n",
         "$y[n] = H\\{x[n]\\} = a_1 H\\{x_1[n]\\} + a_2 H\\{x_2[n]\\}$\n",
         "\n",
-        "---\n",
         "\n",
         "Sea:\n",
         "\n",
@@ -172,7 +170,7 @@
         "id": "F2zLqieiTyjS",
         "outputId": "366b7141-9998-45fb-954b-cd34c6ab335b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -292,7 +290,7 @@
         "id": "FQKXkaXBWQP-",
         "outputId": "905f6d53-d7b7-46b9-890f-d264404b7199"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -362,7 +360,7 @@
         "x_1[n] = x[n - n_0] \\quad \\Rightarrow \\quad y_1[n] = y[n - n_0]\n",
         "$$\n",
         "\n",
-        "✅ En este caso **sí se cumple**, porque la salida es:\n",
+        "En este caso **sí se cumple**, porque la salida es:\n",
         "\n",
         "$$\n",
         "y[n] = \\text{median}(x[n-1], x[n], x[n+1])\n",
@@ -412,7 +410,7 @@
         "id": "mFmAH9whXtPF",
         "outputId": "1d30454e-e60e-482d-cdaa-e92f99ace5ee"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -489,13 +487,13 @@
         "a_1 H\\{x_1\\} + a_2 H\\{x_2\\} = a_1 (A x_1 + B) + a_2 (A x_2 + B) = A(a_1 x_1 + a_2 x_2) + (a_1 + a_2) B\n",
         "$$\n",
         "\n",
-        "⚠️ Los términos constantes **no coinciden** a menos que:\n",
+        "Los términos constantes **no coinciden** a menos que:\n",
         "\n",
         "$$\n",
         "a_1 + a_2 = 1\n",
         "$$\n",
         "\n",
-        "**El sistema NO es lineal si** \\( B \\ne 0 \\)\n",
+        "**El sistema NO es lineal si** $ B \\ne 0 $\n",
         "\n",
         "---\n",
         "\n",
@@ -555,7 +553,7 @@
         "id": "0cSMUHLhYoVj",
         "outputId": "c31d8002-5503-445e-922b-86336dbd6053"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -568,6 +566,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### *Hallar la salida \\( y[n] \\) de un SLIT ante la entrada $ x[n] = \\{-15,\\ 5 \\ -3^\\dagger,\\ 0,\\ 5,\\ 7,\\ -1\\}$ con respuesta al impulso $h[n] = \\{1,\\ -2,\\ 0^\\dagger,\\ 1,\\ -2\\}$ donde $n \\in \\{0, \\pm1, \\pm2, \\ldots, \\pm N\\}$ y $n = 0 $ para $x[n]^\\dagger $. Nota: Utilizar método gráfico para encontrar la salida y comprobar con simulación en Python. Ver cuaderno Convolución discreta. Repita el proceso para el sistema con respuesta al escalón: $\\{-1,\\ 6,\\ -10,\\ 3^\\dagger,\\ 1,\\ -10,\\ 2,\\ 5\\}$ (Ver cuaderno Respuesta Escalón).\n"
+      ],
+      "metadata": {
+        "id": "SR0XVgHj7XjH"
+      }
     }
   ]
 }
