--- a/Propiedades_Laplace.ipynb
+++ b/Propiedades_Laplace.ipynb
@@ -155,7 +155,49 @@
       "source": [
         "**Ejercicio**\n",
         "\n",
-        "* Determinar los polos y ceros de la transformada de Laplace $\\mathsf{L} \\{ \\epsilon(t) \\cdot \\sin(\\omega_0 t) \\}$ mediante el cálculo manual y extendiendo el ejemplo anterior. Qué simetría muestran los polos y los ceros en el plano $s$?"
+        "* Determinar los polos y ceros de la transformada de Laplace $\\mathsf{L} \\{ \\epsilon(t) \\cdot \\sin(\\omega_0 t) \\}$ mediante el cálculo manual y extendiendo el ejemplo anterior. Qué simetría muestran los polos y los ceros en el plano $s$?\n",
+        "\n",
+        "## Solución:\n",
+        "\n",
+        "### 1. **Transformada de Laplace**\n",
+        "\n",
+        "Sabemos que:\n",
+        "\n",
+        "$\\mathcal{L} \\{ \\epsilon(t) \\cdot \\sin(\\omega_0 t) \\} = \\frac{\\omega_0}{s^2 + \\omega_0^2}, \\quad \\text{para } \\Re\\{s\\} > 0$\n",
+        "\n",
+        " 2. **Identificación de polos y ceros**\n",
+        "\n",
+        "La función en el dominio $s$ es:\n",
+        "\n",
+        "$$X(s) = \\frac{\\omega_0}{s^2 + \\omega_0^2}$$\n",
+        "\n",
+        "#### **Ceros**:\n",
+        "El numerador es constante ($\\omega_0$), **no tiene ceros finitos**. Es decir, **no hay ceros** en el plano $s$.\n",
+        "\n",
+        "#### **Polos**:\n",
+        "Los polos están en los valores que anulan el denominador:\n",
+        "\n",
+        "$s^2 + \\omega_0^2 = 0 \\quad \\Rightarrow \\quad s = \\pm j\\omega_0$\n",
+        "\n",
+        "\n",
+        "### 3. **Región de Convergencia (ROC)**\n",
+        "\n",
+        "- Como la señal es **causal** (multiplicada por $\\epsilon(t)$), la **ROC es**:\n",
+        "\n",
+        "$${\\Re\\{s\\} > 0}$$\n",
+        "\n",
+        "\n",
+        "### 4. **Simetría en el plano $s$**\n",
+        "\n",
+        "Los polos se ubican en $s = +j\\omega_0$ y $s = -j\\omega_0$.\n",
+        "\n",
+        "Esto muestra **simetría conjugada respecto al eje real**:\n",
+        "\n",
+        "- Si $s$ es un polo, entonces $\\bar{s}$ también lo es.\n",
+        "\n",
+        "**Conclusión**: los **polos** están ubicados simétricamente sobre el eje imaginario, en $s = \\pm j\\omega_0$.  \n",
+        "No hay ceros en el plano $s$.\n",
+        "\n"
       ]
     },
     {
