--- a/ejercicios_Laplace.ipynb
+++ b/ejercicios_Laplace.ipynb
@@ -664,7 +664,7 @@
           "height": 507
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -770,7 +770,7 @@
           "height": 527
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -791,6 +791,398 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### *Sea la señal Gaussiana $x(t) = e^{-a t^2}$ con $a \\in \\mathbb{R}^+$, el sistema $A$ con relación entrada-salida $y_A(t) = x^2(t)$, y el sistema lineal e invariante con el tiempo $B$ con respuesta al impulso $h_B(t) = B e^{-b t^2}$: a) Encuentre la salida del sistema en serie $x(t) \\rightarrow h_B(t) \\rightarrow y_A(t) \\rightarrow y(t)$ b) Encuentre la salida del sistema en serie $x(t) \\rightarrow y_A(t) \\rightarrow h_B(t) \\rightarrow y(t)$\n"
+      ],
+      "metadata": {
+        "id": "KygoYRX6Tk-8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Entrada: señal Gaussiana  \n",
+        "  $$\n",
+        "  x(t) = e^{-a t^2}, \\quad a > 0\n",
+        "  $$\n",
+        "\n",
+        "* Sistema **A**: no lineal  \n",
+        "  $$\n",
+        "  y_A(t) = x^2(t)\n",
+        "  $$\n",
+        "\n",
+        "* Sistema **B**: **lineal e invariante en el tiempo (SLIT)**, con respuesta al impulso:  \n",
+        "  $$\n",
+        "  h_B(t) = B e^{-b t^2}, \\quad b > 0, \\ B \\in \\mathbb{R}\n",
+        "  $$\n",
+        "---\n",
+        "a) Salida del sistema: $x(t) \\rightarrow h_B(t) \\rightarrow y_A(t) \\rightarrow y(t)$\n",
+        "\n",
+        "**Primero:** pasa por el sistema **B** (SLIT), es decir:  \n",
+        "$$\n",
+        "y_B(t) = x(t) * h_B(t) = \\int_{-\\infty}^{\\infty} x(\\tau) h_B(t - \\tau) d\\tau\n",
+        "$$\n",
+        "\n",
+        "Usamos:  \n",
+        "$x(\\tau) = e^{-a \\tau^2}$  \n",
+        "$h_B(t - \\tau) = B e^{-b (t - \\tau)^2}$\n",
+        "\n",
+        "Entonces:  \n",
+        "$$\n",
+        "y_B(t) = \\int_{-\\infty}^{\\infty} e^{-a \\tau^2} \\cdot B e^{-b (t - \\tau)^2} d\\tau = B \\int_{-\\infty}^{\\infty} e^{-a \\tau^2 - b(t - \\tau)^2} d\\tau\n",
+        "$$\n",
+        "\n",
+        "Agrupamos los exponentes. Expandimos $(t - \\tau)^2$:  \n",
+        "$$\n",
+        "(t - \\tau)^2 = t^2 - 2t\\tau + \\tau^2\n",
+        "\\Rightarrow\n",
+        "-a\\tau^2 - b(t^2 - 2t\\tau + \\tau^2) = -(a + b)\\tau^2 + 2bt\\tau - bt^2\n",
+        "$$\n",
+        "\n",
+        "Entonces:  \n",
+        "$$\n",
+        "y_B(t) = B e^{-bt^2} \\int_{-\\infty}^{\\infty} e^{-(a + b)\\tau^2 + 2bt\\tau} d\\tau\n",
+        "$$\n",
+        "\n",
+        "Usamos la fórmula del **completado de cuadrados** para resolver la integral Gaussiana:  \n",
+        "$$\n",
+        "\\int_{-\\infty}^\\infty e^{-p\\tau^2 + q\\tau} d\\tau = \\sqrt{\\frac{\\pi}{p}} e^{\\frac{q^2}{4p}}, \\quad \\text{si } p > 0\n",
+        "$$\n",
+        "\n",
+        "Aquí:  \n",
+        "$p = a + b$  \n",
+        "$q = 2bt$\n",
+        "\n",
+        "Entonces:  \n",
+        "$$\n",
+        "y_B(t) = B e^{-bt^2} \\cdot \\sqrt{\\frac{\\pi}{a + b}} \\cdot e^{\\frac{(2bt)^2}{4(a + b)}}\n",
+        "= B \\sqrt{\\frac{\\pi}{a + b}} e^{-bt^2} e^{\\frac{4b^2t^2}{4(a + b)}}\n",
+        "= B \\sqrt{\\frac{\\pi}{a + b}} e^{\\left(-bt^2 + \\frac{b^2t^2}{a + b}\\right)}\n",
+        "$$\n",
+        "\n",
+        "Simplificamos el exponente:  \n",
+        "$$\n",
+        "-bt^2 + \\frac{b^2t^2}{a + b} = t^2\\left( -b + \\frac{b^2}{a + b} \\right)\n",
+        "= t^2 \\cdot \\left( \\frac{-b(a + b) + b^2}{a + b} \\right)\n",
+        "= t^2 \\cdot \\left( \\frac{-ab}{a + b} \\right)\n",
+        "$$\n",
+        "\n",
+        "Entonces:  \n",
+        "$$\n",
+        "y_B(t) = B \\sqrt{\\frac{\\pi}{a + b}} \\cdot e^{-\\frac{ab}{a + b} t^2}\n",
+        "$$\n",
+        "\n",
+        "Ahora pasa por el sistema A (cuadrático):\n",
+        "$$\n",
+        "y(t) = [y_B(t)]^2 = B^2 \\cdot \\frac{\\pi}{a + b} \\cdot e^{-2\\cdot\\frac{ab}{a + b} t^2}\n",
+        "$$\n",
+        "\n",
+        "Resultado (parte a):\n",
+        "$$\n",
+        "{\n",
+        "y(t) = B^2 \\cdot \\frac{\\pi}{a + b} \\cdot e^{-\\frac{2ab}{a + b} t^2}\n",
+        "}\n",
+        "$$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "b) Salida del sistema: $x(t) \\rightarrow y_A(t) \\rightarrow h_B(t) \\rightarrow y(t)$\n",
+        "\n",
+        "Primero pasa por sistema A:\n",
+        "$$\n",
+        "y_A(t) = x^2(t) = \\left(e^{-a t^2}\\right)^2 = e^{-2a t^2}\n",
+        "$$\n",
+        "\n",
+        "Ahora pasa por sistema B (convolución):\n",
+        "$$\n",
+        "y(t) = y_A(t) * h_B(t) = \\int_{-\\infty}^{\\infty} e^{-2a \\tau^2} \\cdot B e^{-b(t - \\tau)^2} d\\tau\n",
+        "$$\n",
+        "\n",
+        "Sigue el mismo procedimiento que en el inciso anterior. Expandimos:  \n",
+        "$$\n",
+        "b(t - \\tau)^2 = bt^2 - 2bt\\tau + b\\tau^2\n",
+        "\\Rightarrow \\text{Exponente: } -2a\\tau^2 - b(t - \\tau)^2 = -(2a + b)\\tau^2 + 2bt\\tau - bt^2\n",
+        "$$\n",
+        "\n",
+        "Entonces:  \n",
+        "$$\n",
+        "y(t) = B e^{-bt^2} \\int_{-\\infty}^{\\infty} e^{-(2a + b)\\tau^2 + 2bt\\tau} d\\tau\n",
+        "= B e^{-bt^2} \\cdot \\sqrt{\\frac{\\pi}{2a + b}} \\cdot e^{\\frac{b^2 t^2}{2a + b}}\n",
+        "$$\n",
+        "\n",
+        "Juntamos los exponentes:  \n",
+        "$$\n",
+        "y(t) = B \\sqrt{\\frac{\\pi}{2a + b}} \\cdot e^{t^2 \\left( -b + \\frac{b^2}{2a + b} \\right)}\n",
+        "$$\n",
+        "\n",
+        "Simplificamos:  \n",
+        "$$\n",
+        "-b + \\frac{b^2}{2a + b} = \\frac{-b(2a + b) + b^2}{2a + b} = \\frac{-2ab}{2a + b}\n",
+        "$$\n",
+        "\n",
+        "Entonces:  \n",
+        "$$\n",
+        "y(t) = B \\sqrt{\\frac{\\pi}{2a + b}} \\cdot e^{-\\frac{2ab}{2a + b} t^2}\n",
+        "$$\n",
+        "\n",
+        "Resultado (parte b):\n",
+        "$$\n",
+        "{\n",
+        "y(t) = B \\cdot \\sqrt{\\frac{\\pi}{2a + b}} \\cdot e^{-\\frac{2ab}{2a + b} t^2}\n",
+        "}\n",
+        "$$\n"
+      ],
+      "metadata": {
+        "id": "3NSshlaJVrus"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### *Consultar y realizar los ejercicios del cuaderno Definición transformada de la Laplace\n",
+        "\n",
+        "link: https://github.com/laduqueo/Senales_y_Sistemas/blob/main/Definicion_Laplace.ipynb"
+      ],
+      "metadata": {
+        "id": "gQG0xofxX_Pv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### * Consultar y realizar los ejercicios del cuaderno Propiedades básicas transformada de la Laplace\n",
+        "\n",
+        "link: https://github.com/laduqueo/Senales_y_Sistemas/blob/main/Propiedades_Laplace.ipynb"
+      ],
+      "metadata": {
+        "id": "Jd--kzYOgmFV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### * Demuestre las siguientes propiedades (sin utilizar tablas de propiedades: (Ver material de apoyo y propiedades de Laplace.)\n",
+        "\n",
+        "\n",
+        "i) $$\\mathcal{L}\\{x(t - t_0)\\} = e^{-s t_0} X(s)$$\n",
+        "\n",
+        "**Demostración:**\n",
+        "\n",
+        "La definición bilateral de la transformada de Laplace es:\n",
+        "\n",
+        "$$\n",
+        "\\mathcal{L}\\{x(t - t_0)\\} = \\int_{-\\infty}^{\\infty} x(t - t_0) e^{-s t} dt\n",
+        "$$\n",
+        "\n",
+        "Cambio de variable:\n",
+        "\n",
+        "$$\n",
+        "\\tau = t - t_0 \\Rightarrow t = \\tau + t_0,\\quad dt = d\\tau\n",
+        "$$\n",
+        "\n",
+        "Sustituimos:\n",
+        "\n",
+        "$$\n",
+        "\\mathcal{L}\\{x(t - t_0)\\} = \\int_{-\\infty}^{\\infty} x(\\tau) e^{-s (\\tau + t_0)} d\\tau = e^{-s t_0} \\int_{-\\infty}^{\\infty} x(\\tau) e^{-s \\tau} d\\tau = e^{-s t_0} X(s)\n",
+        "$$\n",
+        "\n",
+        "ii) $$\\mathcal{L}\\{x(at)\\} = \\frac{1}{|a|} X\\left(\\frac{s}{a}\\right)$$\n",
+        "\n",
+        "\n",
+        "**Demostración:**\n",
+        "\n",
+        "$$\n",
+        "\\mathcal{L}\\{x(at)\\} = \\int_{-\\infty}^{\\infty} x(at) e^{-s t} dt\n",
+        "$$\n",
+        "\n",
+        "Cambio de variable:\n",
+        "\n",
+        "$$\n",
+        "\\tau = at \\Rightarrow t = \\frac{\\tau}{a}, \\quad dt = \\frac{d\\tau}{a}\n",
+        "$$\n",
+        "\n",
+        "Entonces:\n",
+        "\n",
+        "$$\n",
+        "\\mathcal{L}\\{x(at)\\} = \\int_{-\\infty}^{\\infty} x(\\tau) e^{-s \\frac{\\tau}{a}} \\frac{d\\tau}{a} = \\frac{1}{|a|} \\int_{-\\infty}^{\\infty} x(\\tau) e^{-\\frac{s}{a} \\tau} d\\tau = \\frac{1}{|a|} X\\left( \\frac{s}{a} \\right)\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "iii) $$\\mathcal{L}\\left\\{ \\frac{dx(t)}{dt} \\right\\} = s X(s)$$\n",
+        "\n",
+        "**Demostración:**\n",
+        "\n",
+        "Usamos integración por partes:\n",
+        "\n",
+        "$$\n",
+        "\\mathcal{L}\\left\\{ \\frac{dx(t)}{dt} \\right\\} = \\int_{-\\infty}^{\\infty} \\frac{dx(t)}{dt} e^{-st} dt\n",
+        "$$\n",
+        "\n",
+        "Sea:\n",
+        "\n",
+        "- $u = e^{-st} \\Rightarrow du = -s e^{-st} dt$\n",
+        "- $dv = \\frac{dx(t)}{dt} dt \\Rightarrow v = x(t)$\n",
+        "\n",
+        "Entonces:\n",
+        "\n",
+        "$$\n",
+        "\\int \\frac{dx(t)}{dt} e^{-st} dt = x(t) e^{-st} \\Big|_{-\\infty}^{\\infty} + s \\int x(t) e^{-st} dt\n",
+        "$$\n",
+        "\n",
+        "Si $x(t) e^{-st} \\to 0$ en los extremos:\n",
+        "\n",
+        "$$\n",
+        "\\mathcal{L}\\left\\{ \\frac{dx(t)}{dt} \\right\\} = s X(s)\n",
+        "$$\n",
+        "\n",
+        "iv) $$\\mathcal{L}\\{x(t) * y(t)\\} = X(s) \\cdot Y(s)$$\n",
+        "\n",
+        "**Demostracion:**\n",
+        "\n",
+        "\n",
+        "$$\n",
+        "x(t) * y(t) = \\int_{-\\infty}^{\\infty} x(\\tau) y(t - \\tau) d\\tau\n",
+        "$$\n",
+        "\n",
+        "Aplicamos Laplace:\n",
+        "\n",
+        "$$\n",
+        "\\mathcal{L}\\left\\{ \\int_{-\\infty}^{\\infty} x(\\tau) y(t - \\tau) d\\tau \\right\\} = \\int_{-\\infty}^{\\infty} \\left( \\int_{-\\infty}^{\\infty} x(\\tau) y(t - \\tau) d\\tau \\right) e^{-s t} dt\n",
+        "$$\n",
+        "\n",
+        "Intercambiamos el orden de integración:\n",
+        "\n",
+        "$$\n",
+        "= \\int_{-\\infty}^{\\infty} x(\\tau) \\left( \\int_{-\\infty}^{\\infty} y(t - \\tau) e^{-s t} dt \\right) d\\tau\n",
+        "$$\n",
+        "\n",
+        "Cambio de variable: $u = t - \\tau \\Rightarrow t = u + \\tau$\n",
+        "\n",
+        "$$\n",
+        "= \\int_{-\\infty}^{\\infty} x(\\tau) \\left( \\int_{-\\infty}^{\\infty} y(u) e^{-s (u + \\tau)} du \\right) d\\tau = \\int_{-\\infty}^{\\infty} x(\\tau) e^{-s \\tau} d\\tau \\cdot \\int_{-\\infty}^{\\infty} y(u) e^{-s u} du\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "= X(s) \\cdot Y(s)\n",
+        "$$\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YM4HONVWje8j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### * Encuentre la transformada de Laplace, dibuje el esquema de polos y ceros y la región de convergencia (ROC), de las siguientes señales:\n",
+        "\n",
+        "i) $e^{-2t} u(t) + e^{-3t} u(t)$\n",
+        "\n",
+        "Ambas son señales causales (multiplicadas por $u(t)$).\n",
+        "\n",
+        "Transformadas individuales:\n",
+        "\n",
+        "- $\\mathcal{L}\\{e^{-2t} u(t)\\} = \\dfrac{1}{s + 2}, \\quad \\text{ROC: } \\Re\\{s\\} > -2$\n",
+        "- $\\mathcal{L}\\{e^{-3t} u(t)\\} = \\dfrac{1}{s + 3}, \\quad \\text{ROC: } \\Re\\{s\\} > -3$\n",
+        "\n",
+        "Transformada total:\n",
+        "\n",
+        "$$\n",
+        "X(s) = \\frac{1}{s + 2} + \\frac{1}{s + 3}\n",
+        "$$\n",
+        "\n",
+        "ROC: intersección de las dos → $\\Re\\{s\\} > -2$\n",
+        "\n",
+        "- Polos: $s = -2$ y $s = -3$\n",
+        "- Ceros: ninguno explícito\n",
+        "- ROC: parte derecha del polo más a la derecha → $\\Re\\{s\\} > -2$\n",
+        "---\n",
+        "\n",
+        "ii) $e^{2t} u(t) + e^{-3t} u(-t)$\n",
+        "\n",
+        "Esta señal tiene una parte causal y otra anticausal.\n",
+        "\n",
+        "Primera parte:\n",
+        "\n",
+        "- $\\mathcal{L}\\{e^{2t} u(t)\\} = \\dfrac{1}{s - 2}, \\quad \\text{ROC: } \\Re\\{s\\} > 2$\n",
+        "\n",
+        "Segunda parte:\n",
+        "\n",
+        "- $\\mathcal{L}\\{e^{-3t} u(-t)\\} = \\dfrac{1}{s + 3}, \\quad \\text{ROC: } \\Re\\{s\\} < -3$\n",
+        "\n",
+        "Transformada total:\n",
+        "\n",
+        "$$\n",
+        "X(s) = \\frac{1}{s - 2} + \\frac{1}{s + 3}\n",
+        "$$\n",
+        "\n",
+        "ROC: no existe ROC común → no existe transformada bilateral con ROC no vacía\n",
+        "\n",
+        "Conclusión: no existe $X(s)$ bilateral válida. Solo se puede definir unilateralmente si $t \\geq 0$.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "iii) $e^{-a|t|}$\n",
+        "\n",
+        "Esta función es par, y se puede escribir como:\n",
+        "\n",
+        "$$\n",
+        "x(t) = e^{-a t} u(t) + e^{a t} u(-t)\n",
+        "$$\n",
+        "\n",
+        "Transformadas:\n",
+        "\n",
+        "- $e^{-a t} u(t) \\rightarrow \\dfrac{1}{s + a}, \\quad \\Re\\{s\\} > -a$\n",
+        "- $e^{a t} u(-t) \\rightarrow \\dfrac{1}{s - a}, \\quad \\Re\\{s\\} < a$\n",
+        "\n",
+        "Transformada total:\n",
+        "\n",
+        "$$\n",
+        "X(s) = \\frac{1}{s + a} + \\frac{1}{s - a}\n",
+        "$$\n",
+        "\n",
+        "ROC: $\\Re\\{s\\} \\in (-a, a)$\n",
+        "\n",
+        "- Polos: $s = -a$ y $s = a$\n",
+        "----\n",
+        "\n",
+        "iv) $e^{-2t}[u(t) - u(t - 5)]$\n",
+        "\n",
+        "Esto es una exponencial truncada entre $t = 0$ y $t = 5$:\n",
+        "\n",
+        "$$\n",
+        "x(t) =\n",
+        "\\begin{cases}\n",
+        "e^{-2t}, & 0 \\leq t < 5 \\\\\n",
+        "0, & \\text{en otro caso}\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "\n",
+        "Transformada de Laplace (usando definición):\n",
+        "\n",
+        "$$\n",
+        "X(s) = \\int_0^5 e^{-2t} \\cdot e^{-s t} dt = \\int_0^5 e^{-(s + 2)t} dt\n",
+        "$$\n",
+        "\n",
+        "Integrando:\n",
+        "\n",
+        "$$\n",
+        "X(s) = \\left[ \\frac{e^{-(s + 2)t}}{-(s + 2)} \\right]_0^5 = \\frac{1 - e^{-5(s + 2)}}{s + 2}\n",
+        "$$\n",
+        "\n",
+        "ROC: toda la recta compleja → $\\Re\\{s\\} \\in \\mathbb{R}$\n",
+        "\n",
+        "- Polos: $s = -2$\n",
+        "- Ceros: cuando $1 - e^{-5(s + 2)} = 0 \\Rightarrow s = -2 + \\dfrac{2\\pi j n}{5}, \\quad n \\in \\mathbb{Z}$\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zEVHXpONmocB"
+      }
     }
   ]
 }
